--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">The cocktail</string>
+    <string name="discovery">Discovery</string>
+    <string name="setting">Setting</string>
+    <string name="favourite">Favourite</string>
+    <string name="category">Category</string>
+    <string name="search">Search…</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="see_more">See more</string>
+    <string name="cocktail">Cocktail</string>
+    <string name="what_to_drink_today">What to drink today?</string>
 </resources>
