--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="yes">Yes</string>
     <string name="empty">Empty</string>
     <string name="cancel">Cancel</string>
+    <string name="type">Type</string>
+    <string name="ingredient">Ingredient</string>
 </resources>
